# parsing-web

./: .gitignore  main.py  pyproject.toml
src/parse/: html.py  kasta.py  olx.py  parse.py  product.py  shafa.py  web_product.py
src/sequences/: kasta.py  olx.py  sequence.py  shafa.py
src/test_html/: kasta_content  olx_content  shafa_content
src/test_requests/: fill_test_html.py  request.py
